# rJKOtt

./: .buildinfo  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  rJKOtt.DistributionOnGrid.html  rJKOtt.TensorTrainSolver.html  rJKOtt.html  search.html  searchindex.js
.github/workflows/: documentation.yml  sphinx_to_pages.yml
_include/: examples.html
_include/notebooks/: ex_sampling.html
_modules/: index.html
_modules/rJKOtt/: DistributionOnGrid.html  TensorTrainSolver.html
_sources/: rJKOtt.DistributionOnGrid.rst.txt  rJKOtt.rst.txt
_sources/_include/: examples.rst.txt
devtools/conda-envs/: docs_env.yaml  docs_env.yml
docs/: conf.py  index.rst  modules.rst  rJKOtt.TensorTrainSolver.rst
docs/_include/notebooks/: ex_sampling.ipynb
manuscript/sec5_test_distributions/: doublemoon_artifact.py  test_doublemoon.py  test_mixture.py  test_nonconvex.py
manuscript/sec6_inverse_problems/: heat_equation.py  heat_importance_sampling.py  inverse_problem.py  test.py  wave_equation.py
src/rJKOtt/: DistributionOnGrid.py  TensorTrainSolver.py  __init__.py  utility.py
tests/: ex_sampling.py
